totals route added

--- a/public/index.html
+++ b/public/index.html
@@ -4,5 +4,6 @@
 <li><a href="/api/getStats">/api/getStats</a> - Just the current numbers from YouTube - no database update</li>
 <li><a href="/api/currentTotal">/api/currentTotal</a> - Just the current total from YouTube - no database update</li>
 <li><a href="/api/insertStats">/api/insertStats</a> - Gets the current numbers from YouTube and inserts them, then returns the whole stats table.</li>
+<li><a href="/api/totals">/api/totals</a> - Updates the stats table with current stats, and returns the current timestamped historic and current totals</li>
 </ul>
 </div></body></html>
