--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,6 @@
 <li><a href="/api/currentTotal">/api/currentTotal</a> - Just the current total from YouTube - no database update</li>
 <li><a href="/api/insertStats">/api/insertStats</a> - Gets the current numbers from YouTube and inserts them, then returns the whole stats table.</li>
 <li><a href="/api/totals">/api/totals</a> - Updates the stats table with current stats, and returns historic views and number of videos</li>
+<li><a href="/api/videos">/api/videos</a> - Returns the videos table from sqlite database</li>
 </ul>
 </div></body></html>
