--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,6 @@
 <li><a href="/api/insertStats">/api/insertStats</a> - Gets the current numbers from YouTube and inserts them, then returns the whole stats table.</li>
 <li><a href="/api/totals">/api/totals</a> - Updates the stats table with current stats, and returns historic views and number of videos</li>
 <li><a href="/api/videos">/api/videos</a> - Returns the videos table from sqlite database</li>
+<li><a href="/api/insertVids">/api/insertVids</a> - ?ids=comma,seperated,list of ids to insert videos by id</li>
 </ul>
 </div></body></html>
