audience type api funcdtional

--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,6 @@
 <li><a href="/api/totals">/api/totals</a> - Updates the stats table with current stats, and returns historic views and number of videos</li>
 <li><a href="/api/videos">/api/videos</a> - Returns the videos table from sqlite database</li>
 <li><a href="/api/insertVids">/api/insertVids</a> - ?ids=comma,seperated,list of ids to insert videos by id</li>
+<li><a href="/api/audienceType">/api/audienceType</a> - returns an array of vidIds with the playlist title and audience</li>
 </ul>
 </div></body></html>
